--- a/index.html
+++ b/index.html
@@ -6,5 +6,21 @@
     <title>HTML-Debrief</title>
   </head>
   <body>
+    <footer>
+      <a href="https://www.google.com">Click here to search google!</a>
+      <table>
+        <thead>
+          <tr>
+          <th>Heading 1</th>
+          <th>Heading 2</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr></tr>
+          <tr></tr>
+          <tr></tr>
+        </tbody>
+      </table>
+    </footer>
   </body>
 </html>
