--- a/index.html
+++ b/index.html
@@ -1,54 +1,82 @@
 <!DOCTYPE html>
 <html>
-  <!-- Head meta data -->
-  <head>
-    <!-- Title -->
-    <title>HTML-Debrief</title>
-  </head>
-  <body>
+	<!-- Head meta data -->
+	<head>
+		<!-- Title -->
+		<title>HTML-Debrief</title>
+		<!-- Style for table -->
+		<style>
+			table,
+			td {
+				border: 1px solid #333;
+			}
 
-<!-- 14. Create a <div> with the class “main-container”. -->
-    <div class="main-container">
+			thead,
+			tfoot {
+				background-color: #333;
+				color: #fff;
+			}
+		</style>
+	</head>
+	<body>
+		<!-- 14. Create a <div> with the class “main-container”. -->
+		<div class="main-container">
+			<!-- 15. Inside main-container  create  a  <h1>  tag with the text “HTML - Debrief” and a <p> tag with some random text using our lorem20. -->
+			<h1>HTML - Debrief</h1>
+			<p>
+				Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum distinctio
+				eius ea modi aliquid accusantium expedita facere mollitia officia
+				molestias?
+			</p>
+			<!-- 16. Underneath your closing  <p>  tag create the tags  <h2>,  <h3>, <h4>, <h5> and <h6>. Give them all the same text of “I am sample text”. -->
+			<h2>I am sample text</h2>
+			<h3>I am sample text</h3>
+			<h4>I am sample text</h4>
+			<h5>I am sample text</h5>
+			<h6>I am sample text</h6>
+			<!-- 17. After that, use your google skills to create an unordered list with a class of “unordered-list” and insert three list item entries -->
+			<ul class="unordered-list">
+				<li>list item 1</li>
+				<li>list item 2</li>
+				<li>list item 3</li>
+			</ul>
+			<!-- 18. Again, using your google skills, create an ordered list with an id of “ordered-list” and insert three list item entries. -->
+			<ol class="ordered-list">
+				<li>list item 1</li>
+				<li>list item 2</li>
+				<li>list item 3</li>
+			</ol>
+		</div>
 
-<!-- 15. Inside main-container  create  a  <h1>  tag with the text “HTML - Debrief” and a <p> tag with some random text using our lorem20. -->
-      <h1>HTML - Debrief</h1>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum distinctio eius ea modi aliquid accusantium expedita facere mollitia officia molestias?</p>
-<!-- 16. Underneath your closing  <p>  tag create the tags  <h2>,  <h3>, <h4>, <h5> and <h6>. Give them all the same text of “I am sample text”. -->
-            <h2>I am sample text</h2>
-            <h3>I am sample text</h3>
-            <h4>I am sample text</h4>
-            <h5>I am sample text</h5>
-            <h6>I am sample text</h6>
-<!-- 17. After that, use your google skills to create an unordered list with a class of “unordered-list” and insert three list item entries -->
-          <ul class="unordered-list">
-             <li>list item 1</li>
-             <li>list item 2</li>
-             <li>list item 3</li>
-          </ul>
-    <!-- 18. Again, using your google skills, create an ordered list with an id of “ordered-list” and insert three list item entries. -->
-          <ol class="ordered-list">
-             <li>list item 1</li>
-             <li>list item 2</li>
-             <li>list item 3</li>
-          </ol>
-       </div>  
+		<!-- Table -->
+		<table>
+			<thead>
+				<tr>
+					<th>Heading 1</th>
+					<th>Heading 2</th>
+				</tr>
+			</thead>
+			<tbody>
+				<tr>
+					<td>Cell 1</td>
+					<td>Cell 2</td>
+				</tr>
+				<tr>
+					<td>Cell 3</td>
+					<td>Cell 4</td>
+				</tr>
+			</tbody>
+		</table>
 
-    <footer>
-      <a href="https://www.google.com">Click here to search google!</a>
-      <table>
-        <thead>
-          <tr>
-          <th>Heading 1</th>
-          <th>Heading 2</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr></tr>
-          <tr></tr>
-          <tr></tr>
-        </tbody>
-      </table>
-    </footer>
-    
-  </body>
+		<br />
+
+		<a href="./contact.html"> Contact Page </a>
+
+		<br />
+		<br />
+
+		<footer>
+			<a href="https://www.google.com">Click here to search google!</a>
+		</footer>
+	</body>
 </html>
